fix off center header on index
fix in css too

--- a/_sass/_pages/_index.scss
+++ b/_sass/_pages/_index.scss
@@ -14,8 +14,12 @@
     display: flex;
 }
 
-.hero-content{
+.hero-content-wrapper{
     margin: auto;
+}
+
+.hero-content{
+    margin:0 auto;
     max-width:  800px;
 }
 
